# bin2rinex

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  main.rs
